feat: color of name in input is always black

--- a/templates/boundary/show-remove-preexisting.html
+++ b/templates/boundary/show-remove-preexisting.html
@@ -36,6 +36,7 @@
         border: 1px solid #1f293700;
         border-radius: 4px;
         max-width: 560px;
+        color: black;
     }
     #edit_name_icon {
         margin-left: 10px;
