feat: all text is selected when edit icon is clicked

--- a/templates/boundary/show-remove-preexisting.html
+++ b/templates/boundary/show-remove-preexisting.html
@@ -70,7 +70,9 @@
 
     function enableNameInput(self) {
       self.classList.add('disabled')
-      document.querySelector('.name_of_boundary').disabled = false
+      const name_of_boundary = document.querySelector('.name_of_boundary')
+      name_of_boundary.disabled = false
+      name_of_boundary.select()
     }
     function disableNameInput(self) {
       self.disabled = true
