--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -265,11 +265,11 @@
                         <div class="flex-this w-100">
                             <p class="w-100">
                                 {% if 'native-land.ca' in project.source_of_boundary and project.name_of_boundary %}
-                                    <span class="italic" style="font-size: 20px">
+                                    <span style="font-size: 20px">
                                         <a
                                            href="{{project.source_of_boundary}}"
                                            class="default-a" target="_blank" rel="noopener"
-                                           style="font-weight: unset; display: block; margin-bottom: 5px;">
+                                           style="display: block; margin-bottom: 5px;">
                                             {{ project.name_of_boundary }}
                                             <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
                                         </a>
@@ -279,7 +279,7 @@
                                 style="width: 100%; height: 450px; border: 1px solid cadetblue;">
                                 </iframe>
                                 {% if 'native-land.ca' in project.source_of_boundary %}
-                                    <span class="italic">
+                                    <span>
                                         Project boundary originates from the
                                         <a href="https://native-land.ca/contact"
                                            class="default-a" target="_blank" rel="noopener">
