adjust Project boundary font size and make NLD note under map italic to match the shapefile note

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -265,7 +265,7 @@
                         <div class="flex-this w-100">
                             <p class="w-100">
                                 {% if 'native-land.ca' in project.source_of_boundary and project.name_of_boundary %}
-                                    <span style="font-size: 20px">
+                                    <span>
                                         <a
                                            href="{{project.source_of_boundary}}"
                                            class="default-a" target="_blank" rel="noopener"
@@ -279,7 +279,7 @@
                                 style="width: 100%; height: 450px; border: 1px solid cadetblue;">
                                 </iframe>
                                 {% if 'native-land.ca' in project.source_of_boundary %}
-                                    <span>
+                                    <span class="italic">
                                         Project boundary originates from the
                                         <a href="https://native-land.ca/contact"
                                            class="default-a" target="_blank" rel="noopener">
