--- a/templates/serviceproviders/connections.html
+++ b/templates/serviceproviders/connections.html
@@ -43,7 +43,7 @@
                     <a class="primary-btn action-btn" href="{% url 'public-institution' institution.id %}">View public page</a>
                 </div>
                 <div>
-                    <button name="disconnectAccountbtn" data-name="{{ institution.institution_name }}" data-id="{{ institution.id }}_institution" class="primary-btn disconnect-btn">Disconnect <i class="fa-solid fa-link-simple-slash"></i></button>
+                    <button name="disconnectAccountbtn" data-name="{{ institution.institution_name }}" data-id="{{ institution.id }}_i" class="primary-btn disconnect-btn">Disconnect <i class="fa-solid fa-link-simple-slash"></i></button>
                 </div>
             </div>
 
@@ -85,7 +85,7 @@
                     <a class="primary-btn action-btn" href="{% url 'public-community' community.id %}">View public page</a>
                 </div>
                 <div>
-                    <button name="disconnectAccountbtn" data-name="{{ community.community_name }}" data-id="{{ community.id }}_community" class="primary-btn disconnect-btn">Disconnect <i class="fa-solid fa-link-simple-slash"></i></button>
+                    <button name="disconnectAccountbtn" data-name="{{ community.community_name }}" data-id="{{ community.id }}_c" class="primary-btn disconnect-btn">Disconnect <i class="fa-solid fa-link-simple-slash"></i></button>
                 </div>
             </div>
 
@@ -128,7 +128,7 @@
                     <a class="primary-btn action-btn" href="{% url 'public-researcher' researcher.id %}">View public page</a>
                 </div>
                 <div>
-                    <button name="disconnectAccountbtn" data-name="{% firstof researcher.user.get_full_name researcher.user.username %}" data-id="{{ researcher.id }}_researcher" class="primary-btn disconnect-btn">Disconnect <i class="fa-solid fa-link-simple-slash"></i></button>
+                    <button name="disconnectAccountbtn" data-name="{% firstof researcher.user.get_full_name researcher.user.username %}" data-id="{{ researcher.id }}_r" class="primary-btn disconnect-btn">Disconnect <i class="fa-solid fa-link-simple-slash"></i></button>
                 </div>
             </div>
 
