--- a/templates/accounts/deactivate.html
+++ b/templates/accounts/deactivate.html
@@ -28,6 +28,10 @@
                     <div class="w-50"><h3>{{ users_name }} | Researcher</h3></div>
                     <ul>
                         <li>You're the creator of this account</li>
+                        {% user_created_project_as_researcher profile.user.id researcher.id as created_a_project %}
+                        {% if created_a_project %}
+                            <li>You've created projects for account.</li>
+                        {% endif %}
                     </ul>
                 </div>
             {% endif %}
