feat: added w-100 to input element

--- a/templates/boundary/show-remove-preexisting.html
+++ b/templates/boundary/show-remove-preexisting.html
@@ -87,7 +87,7 @@
 
     <div class="center-boundary-container-item-vertically" style="width: calc(100% - 300px);">
         <div style="display: flex">
-            <input disabled class='name_of_boundary' value="{{ entity.name_of_boundary }}"
+            <input disabled class='name_of_boundary w-100' value="{{ entity.name_of_boundary }}"
                    onchange="shapeFileChange(this)"
                    onblur="disableNameInput(this)"
             >
