--- a/templates/partials/_update-boundary-main-area.html
+++ b/templates/partials/_update-boundary-main-area.html
@@ -102,7 +102,7 @@
 
             <div class="center-boundary-container-item-vertically" style="width: calc(100% - 300px);">
                 <div style="display: flex">
-                    <input disabled class='name_of_boundary' value="{{ community.name_of_boundary }}"
+                    <input disabled class='name_of_boundary w-100' value="{{ community.name_of_boundary }}"
                            onchange="shapeFileChange(this)"
                            onblur="disableNameInput(this)"
                     >
