CU-8689exv4q: updated select account content

--- a/templates/accounts/select-account.html
+++ b/templates/accounts/select-account.html
@@ -32,7 +32,7 @@
                         <p class="mb-0 mt-0"><strong>Community Account</strong></p>
                         <div class="tooltip ml-8"><strong>i</strong>
                             <span class="tooltiptext">
-                                A community entity might be an Indigenous or local community’s Cultural Department; Tribal and Historical Preservation Office; Community Center; Preservation Office; Community Library, Archive, or Museum; Land Council; or Indigenous Rangers.
+                                A community may be represented by an entity such as an Indigenous or local community’s Cultural Department; Library, Archive, or Museum; Community Center; Tribal and Historic Preservation Office; Land Council or Corporation; or Indigenous Rangers.
                             </span>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                         <p class="mb-0 mt-0"><strong>Institution Account</strong></p>
                         <div class="tooltip ml-8"><strong>i</strong>
                             <span class="tooltiptext">
-                                An institution might be an archive, library, museum, historical society, gallery, data repository, university, or media production company. If you are an Indigenous institution, choose the community account.
+                                An institution could be an archive, library, museum, historical society, gallery, data repository, university, or media production company. If you are an Indigenous institution, a community account may be a better fit.
                             </span>
                         </div>
                     </div>
@@ -92,11 +92,6 @@
                 <div class="flex-this column w-80">
                     <div class="flex-this">
                         <p class="mb-0 mt-0"><strong>Researcher Account</strong></p>
-                        <div class="tooltip ml-8"><strong>i</strong>
-                            <span class="tooltiptext">
-                                An individual who carries out academic or scientific research independently or in an institution.
-                            </span>
-                        </div>
                     </div>
                     <p class="mb-0 mt-0">
                         An individual who carries out academic or scientific research independently or in an institution can create projects and generate Notices.
@@ -125,11 +120,11 @@
                         <p class="mb-0 mt-0"><strong>Service Provider Account</strong></p>
                         <div class="tooltip ml-8"><strong>i</strong>
                             <span class="tooltiptext">
-                                A Service Provider is an organization that offers platforms that can be used by customers/users to organize or share collections or data. This includes collections management systems, digital asset management systems, repositories, and databases.
+                                A service provider could be a collections management system, repository workflow platform, or information aggregator.
                             </span>
                         </div>
                     </div>
-                    <p class="mb-0 mt-0">Any organization that integrates Local Contexts Labels and Notices into their products.</p>
+                    <p class="mb-0 mt-0">An organization that integrates a connection to the Local Contexts Hub into their platforms to enable other account types to access their Labels and Notices.</p>
                 </div>
             </div>
         </div>
