CU-8688wn3rd: Updated Notices content page for SP

--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -2,8 +2,12 @@
 <div class="content-card content-card-space white-bg">
     <h2 class="mt-0">Notices</h2>
     <p class="mt-0 w-75">
-        Institutions and researchers can only generate Notices. Applying Notices allows institutions and researchers to engage, acknowledge, and make visible Indigenous interests in collections, information, and data. Notices are a precursor for communities to add their Labels to a project if they choose. <br><br>
-        We recommend beginning with the Open to Collaborate Notice, which you can download from this page without creating a Project. To apply the disclosure Notices, you will create a Project to describe the context.
+        {% if service_provider %}
+            A certified service provider has access to the Engagement Notice, the Open to Collaborate Notice. This Notice can be downloaded from this page and added to your website.
+        {% else %}
+            Institutions and researchers can only generate Notices. Applying Notices allows institutions and researchers to engage, acknowledge, and make visible Indigenous interests in collections, information, and data. Notices are a precursor for communities to add their Labels to a project if they choose. <br><br>
+            We recommend beginning with the Open to Collaborate Notice, which you can download from this page without creating a Project. To apply the disclosure Notices, you will create a Project to describe the context.
+        {% endif %}
     </p>
 </div>
 
