--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -56,7 +56,7 @@
                         {% if urls %}
                             <a id="shareBtn" class="primary-btn">Share Notice <i class="fa-solid fa-share-nodes"></i></a>
                         {% else %}
-                            <a id="addURLBtn" class="primary-btn disabled-btn" title="Add a link in order to share the Notice.">Share <i class="fa-solid fa-share-nodes"></i></a>
+                            <a id="addURLBtn" class="primary-btn disabled-btn" title="Add a link to share the Notice.">Share <i class="fa-solid fa-share-nodes"></i></a>
                         {% endif %}
                     {% else %}
                         <a class="primary-btn disabled-btn" title="{% if not_approved_download_notice %}{{ not_approved_download_notice }}{% endif %}{% if is_sandbox %}{{ download_notice_on_sandbox }}{% endif %}">Download Notice <i class="fa-regular fa-arrow-down-to-line"></i></a>
