CU-86890yuz8: added no invites card and updated no results cards across the site to match

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -19,7 +19,15 @@
     <section class="flex-this column">
 
         {% if not researcher and not user_communities and not user_institutions and not user_service_providers %}
-            <div class="set-height-empty-dash"></div>
+            <div class="dashcard w-100 center-text mt-16" style="margin-bottom:200px;">
+                <p class="center-text">
+                    <strong>There are no accounts yet.</strong>
+                    <br>
+                    <small>
+                        Click the link above to create an account or browse the registry to join an existing account.
+                    </small>
+                </p>
+            </div>
         {% endif %}
 
         {% if researcher %}
