--- a/templates/accounts/member-invitations.html
+++ b/templates/accounts/member-invitations.html
@@ -12,8 +12,8 @@
                     <div class="dashcard">
                         <div class="flex-this">
                             <div class="dashcard-img-container">
-                                <img loading="lazy" 
-                                    class="profile-img" 
+                                <img loading="lazy"
+                                    class="profile-img"
                                     src="{% if invite.institution.image %} {{ invite.institution.image.url }} {% else %} {% static 'images/placeholders/institution-place.jpg' %}{% endif %}" 
                                     alt="{{ invite.institution.invite.institution_name }} image"
                                 >
@@ -22,7 +22,7 @@
 
                                 <div class="flex-this space-between">
                                     <div><h3 class="dashcard-h3 darkteal-text">{{ invite.institution }}</h3></div>
- 
+
                                     <div class="dashcard-btn-container">
                                         <div class="mr-16 mt-8">
                                             <a href="{% url 'delete-member-invitation' invite.id %}" class="default-a">Delete invite</a>
@@ -44,17 +44,17 @@
                                                 {% endif %}
                                             </form>
                                         </div>
-                                    </div>                                 
+                                    </div>
                                 </div>
 
                                 <div>
-                                    <p class="dashcard-subheader">Institution | Members: {% if invite.institution.get_member_count < 10 %}0{{ invite.institution.get_member_count }}{% else %}{{ invite.institution.get_member_count }}{% endif %} | 
+                                    <p class="dashcard-subheader">Institution | Members: {% if invite.institution.get_member_count < 10 %}0{{ invite.institution.get_member_count }}{% else %}{{ invite.institution.get_member_count }}{% endif %} |
                                         Location: {{ invite.institution.get_location }}
                                     </p>
-                                </div>  
+                                </div>
 
                                 <div><p class="dashcard-description description-sm">{% if invite.institution.description %}{{ invite.institution.description }} {% else %} No description provided. {% endif %}</p></div>
-                                
+
                                 <div>
                                     <p class="w-70">
                                         <span class="bold primary-black-text">Invitation Sent By:</span> {% display_name invite.sender %}<br>
@@ -82,8 +82,8 @@
 
                         <div class="flex-this">
                             <div class="dashcard-img-container">
-                                <img loading="lazy" 
-                                    class="profile-img" 
+                                <img loading="lazy"
+                                    class="profile-img"
                                     src="{% if invite.community.image %} {{ invite.community.image.url }} {% else %} {% static 'images/placeholders/community-place.jpg' %}{% endif %}" 
                                     alt="{{ invite.community.invite.community_name }} image"
                                 >
@@ -101,17 +101,17 @@
                                                 {% csrf_token %}
                                                 <input value="{{ invite.id }}" type="hidden" name="invite_id">
                                                 <button class="action-btn primary-btn">Accept invite</button>
-                                            </form>                                            
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div>
-                                    <p class="dashcard-subheader">Community | Members: {% if invite.community.get_member_count < 10 %}0{{ invite.community.get_member_count }}{% else %}{{ invite.community.get_member_count }}{% endif %} | 
+                                    <p class="dashcard-subheader">Community | Members: {% if invite.community.get_member_count < 10 %}0{{ invite.community.get_member_count }}{% else %}{{ invite.community.get_member_count }}{% endif %} |
                                         Location: {{ invite.community.get_location }}
                                     </p>
                                 </div>
-                                
+
                                 <div><p class="dashcard-description description-sm">{% if invite.community.description %}{{ invite.community.description }} {% else %} No description provided. {% endif %}</p></div>
 
                                 <div>
@@ -142,8 +142,8 @@
 
                         <div class="flex-this">
                             <div class="dashcard-img-container">
-                                <img loading="lazy" 
-                                    class="profile-img" 
+                                <img loading="lazy"
+                                    class="profile-img"
                                     src="{% if invite.service_provider.image %} {{ invite.service_provider.image.url }} {% else %} {% static 'images/placeholders/service-provider-place.jpg' %}{% endif %}" 
                                     alt="{{ invite.service_provider.invite.name }} image"
                                 >
@@ -161,7 +161,7 @@
                                                 {% csrf_token %}
                                                 <input value="{{ invite.id }}" type="hidden" name="invite_id">
                                                 <button class="action-btn primary-btn">Accept invite</button>
-                                            </form>                                            
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
@@ -169,7 +169,7 @@
                                 <div>
                                     <p class="dashcard-subheader">Service Provider</p>
                                 </div>
-                                
+
                                 <div><p class="dashcard-description description-sm">{% if invite.service_provider.description %}{{ invite.service_provider.description }} {% else %} No description provided. {% endif %}</p></div>
 
                                 <div>
@@ -197,9 +197,17 @@
 
             {% endfor %}
         {% else %}
-            <p class="center-text">You currently have no new invitations. <br><small>Invitations appear when someone from a community or institution invites you to join their account.</small></p>
+            <div class="dashcard w-100 center-text mt-16 mb-16">
+                <p class="center-text">
+                    <strong>You currently have no new invitations.</strong>
+                    <br>
+                    <small>
+                        Invitations appear when someone from a community or institution invites you to join their account.
+                    </small>
+                </p>
+            </div>
         {% endif %}
-        
+
     </section>
 
 {% endblock %}
