--- a/templates/accounts/registry.html
+++ b/templates/accounts/registry.html
@@ -178,7 +178,7 @@
 
     {% if not items %}
         <div class="dashcard w-100 center-text mt-16 mb-16">
-            <h2>There are no public accounts by that name.</h2>
+            <p class="bold">There are no public accounts by that name.</p>
         </div>
     {% endif %}
 
