--- a/templates/serviceproviders/create-service-provider.html
+++ b/templates/serviceproviders/create-service-provider.html
@@ -18,9 +18,10 @@
     </div>
 
     <p class="mb-0 mt-0">
-        The service provider details provided below will default to a public display in the Local Contexts Registry.
-        Providing your details will give consent to publicly being listed on the Registry.
-        Read more about our privacy standards <a class="default-a" href="https://localcontexts.org/privacy-policy/" target="_blank" rel="noopener">here <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>
+        A <a class="default-a" href="https://localcontexts.org/members-subscribers-and-service-providers/" target="_blank" rel="noopener">certification program</a> for service provider accounts was launched in October 2024. After you submit this form, we will reach out to you and any contacts you indicate below to discuss the certification process.
+    </p>
+    <p class="mb-0">
+        The service provider name, location, and description will be displayed in the Local Contexts Registry. Read more about our privacy standards <a class="default-a" href="https://localcontexts.org/privacy-policy/" target="_blank" rel="noopener">here<i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>.
     </p>
 
 
@@ -45,17 +46,10 @@
             </label>
             {{ form.name }}
 
-            {% if form.errors %}
-                <div class="w-100 mt-1p">
-                    {% for field_name, errors in form.errors.items %}
-                        <div class="red-text">
-                            <strong>{{ field_name }}</strong>:
-                            {% for error in errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% endfor %}
-                </div>
+            {% if form.name.errors %}
+                <div class="msg-red w-50"><small>{{ form.name.errors.as_text }}</small></div>
+            {% elif form.non_field_errors %}
+                <div class="msg-red w-50"><small>{{ form.non_field_errors.as_text }}</small></div>
             {% endif %}
 
             {% include 'partials/_alerts.html' %}
@@ -64,9 +58,12 @@
         <div class="w-100 mt-8">
             <label for="description">Service Provider Description<span class="orange-text required-label" title="">*</span></label>
             <div class="tooltip"><strong>i</strong>
-                <span class="tooltiptext">A service provider description allows you to share key public information about your organization with other users on the Hub.</span>
+                <span class="tooltiptext">A brief description of your organization/platform to share with others on the Hub.</span>
             </div>
             {{ form.description }}
+            {% if form.description.errors %}
+                <div class="msg-red w-50"><small>{{ form.description.errors.as_text }}</small></div>
+            {% endif %}
             <small id="charCount" class="block text-align-right">200/200</small>
         </div>
 
