CU-8688w5419: Minor registry content update

--- a/templates/accounts/registry.html
+++ b/templates/accounts/registry.html
@@ -7,7 +7,7 @@
         <div class="w-80">
             <h2 class="mb-0">The Local Contexts Registry</h2>
             <p>
-                This is the registry for accounts that are registered with the Local Contexts Hub. Visit an account's public page to contact or request to join, and to view public projects, Open to Collaborate Notices, and Labels in use.
+                This is the registry for accounts that are registered with the Local Contexts Hub. Visit an account's public page to contact or request to join, and to view public Projects, Open to Collaborate Notices, and Labels in use.
             </p>
             <p>
                 After you register on the Hub, you can request to join accounts for communities and institutions that you are already affiliated with. <strong>If you wish to collaborate with a community or institution you are not affiliated with, you will connect with them through Projects.</strong> You do not need to join their account.
