added all icons to icon function, added disable and helptext button options

--- a/templates/components/input-components.html
+++ b/templates/components/input-components.html
@@ -3,12 +3,24 @@
 -->
 
 {% if component == 'button' %}
-    <a class="btn btn-{{style}} {% if rounded %}rounded{% endif %}" href="{{ href }}">
-        {% if label %}
+    <div class="btn-container">
+        <a
+            class="btn btn-{{style}} {% if rounded %}rounded{% endif %}"
+            {% if not disabled and not helptext and href %}href="{{ href }}"{% endif %}
+            {% if disabled or helptext %}disabled{% endif %}
+            {% if extra_args %}{{ extra_args }}{% endif %}
+        >
+            {% if label and not rounded %}
             {{ label }}
         {% endif %}
         {% if icon %}
-            <i class="{{ icon }} {% if label %}ml-8{% endif %}" aria-hidden="true"></i>
+                <i class="{{ icon }} {% if label and not rounded %}ml-8{% endif %}" aria-hidden="true"></i>
+            {% endif %}
+        </a>
+        {% if helptext %}
+            <span class="help-text">
+                {{helptext}}
+            </span>
         {% endif %}
-    </a>
+    </div>
 {% endif %}
