--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -416,6 +416,38 @@ input:focus:not(.toggle) {
     width: 50px;
 }
 
+.btn[disabled] {
+    background: #F3F4F6;
+    border: none;
+    color: #4B5563;
+    font-weight: normal;
+    cursor: default;
+}
+
+/* Hover over text for disabled buttons */
+.help-text {
+    display: block;
+    position: absolute;
+    margin-top: 8px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    font-size: 14px;
+    color: #fff;
+    visibility: hidden;
+    right: 5px;
+    z-index: 1;
+    width: 250px;
+    background-color: #EF6C00;
+}
+
+.btn-container {
+    position: relative;
+}
+
+.btn-container:hover .help-text {
+visibility: visible;
+}
+
 /* Primary CTA - Blue */
 .btn-primary {
     background-color: #007385;
@@ -473,10 +505,6 @@ input:focus:not(.toggle) {
     border-radius: 4px;
     border: 1px solid #0D99FF;
     box-shadow: 0.5px 0.5px 2px 0.5px #0D99FF;
-}
-
-.btn-ghost:active:not([disabled]) {
-    background-color: #DD6300;
 }
 
 /* ACTION Buttons / Register,Sign in, etc. */
